Backport of r64212 Issue #1683: prevent forking from interfering in threading storage.